spacing issue in Portal Section

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ div#main.row{
     width:100%;
     padding-top: 2%;
     padding-left: 5%;
-    padding-right:13%;
+    padding-right: 5%;
     padding-bottom:5%;
 }
 
